adding input tags

--- a/job application/index.html
+++ b/job application/index.html
@@ -13,8 +13,21 @@
         <h1>jobs form
         <span class="disc-info">(freshers)</span>
     </h1>
+    <form action="">
+        <div class="form-container">
+        <div class="form-control">
+            <lable for="fist-name">First name</lable>
+            <input id="fist-name" name="fist-name" placeholder="Enter your name..">
+
+        </div>
+        </div>
+        <div class="form-container">
+            <div class="form-control">
+                <lable for="fist-name">First name</lable>
+                <input id="fist-name" name="fist-name" placeholder="Enter your name..">
+    </form>
      </div>
     </div>
     
 </body>
-</html>
+</html> 
