--- a/paralax website/index.html
+++ b/paralax website/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paralax website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <section class="img1">
+        <div class="text1">
+            <span class="text-bag">paralax website</span>
+            
+        </div>
+    </section>
 </body>
 </html>
