--- a/paralax website/index.html
+++ b/paralax website/index.html
@@ -10,9 +10,33 @@
 <body>
     <section class="img1">
         <div class="text1">
-            <span class="text-bag">paralax website</span>
-            
+            <span class="text-bag">Welcome</span>
+
         </div>
     </section>
+    <section class="section section-second">
+        <h2>section Second</h2>
+        <p>parallax, in astronomy, the difference in direction of a celestial object as seen by an observer from two widely separated points. The measurement of parallax is used directly to find the distance of the body from Earth (geocentric parallax) and from the Sun (heliocentric parallax).</p>
+    </section>
+
+    <section class="img2">
+    <div class="text2">
+        <span class="text-bag2">Explore More</span>
+    </div>
+    </section>
+    <section class="section1 section-third">
+        <h3>section third</h3>
+        <p>Astronomers use an effect called parallax to measure distances to nearby stars. Parallax is the apparent displacement of an object because of a change in the observer's point of view. The video below describes how this effect can be observed in an everyday situation, as well as how it is seen and used for finding distances to stars.</p>
+        </section>
+        <section class="img3">
+            <div class="text3">
+                <span class="text-bag3">PARALAX LOOP</span>
+            </div>
+        </section>
+        <section class="section2 section-forth">
+            <h3>CODE EVERYDAY</h3>
+            <p>The first person to succeed at measuring the distance to a star using the parallax method was German astronomer Friedrich Bessel in 1838. Based on his observations, Bessel calculated that the star 61 Cygni, one of the stars in the Cygnus constellation, must be about 10 light-years away from Earth. This was the beginning of the long and tedious process of building a three-dimensional map of the universe. </p>
+
+        </section>
 </body>
 </html>
