fixing html and css code

--- a/landing webpage/index.html
+++ b/landing webpage/index.html
@@ -9,12 +9,19 @@
 </head>
 <body>
     <section class="img1">
-        <div class="text1">
-    
-            <span class="text-bag">I Am Abhishek Gharat </span>
-            <span class="text-bag1">FULL STACK DEVELOPER</span>
-            <h1>Hi,</h1>
+        <div class="text1-container">
+            <h1><span class="text-bag">HI,</span>I Am Abhishek Gharat </h1>
+            <span class="text-bag">FULL STACK DEVELOPER</span>
         </div>
     </section>
+
+    <section class="section section-text1">
+       <h2>WORK , I CAN DO FOR YOU</h2>
+    </section>
+    <div class="container1">
+        <section class="img4">
+</div>
+    
+</section>
 </body>
 </html>
