add new section

--- a/landing webpage/index.html
+++ b/landing webpage/index.html
@@ -11,7 +11,7 @@
     <section class="img1">
         <div class="text1-container">
             <h1><span class="text-bag">HI,</span>I Am Abhishek Gharat </h1>
-            <span class="text-bag">FULL STACK DEVELOPER</span>
+            <h1 class="text-bag">FULL STACK DEVELOPER</h1>
         </div>
     </section>
 
