adding transition and hover effect

--- a/landing webpage/index.html
+++ b/landing webpage/index.html
@@ -15,12 +15,49 @@
         </div>
     </section>
 
-    <section class="section section-text1">
-       <h2>WORK , I CAN DO FOR YOU</h2>
+    <section class="black-box">
+       <h2>WORK , I CAN DO FOR<span>YOU</span></h2>
     </section>
-    <div class="container1">
+    <div class="text-container2">
         <section class="img4">
 </div>
+<section class="white-box">
+    <div class="grid-item">
+    <div class="card">
+        <div class="image-container">
+            <img class="image-resize" src="./image/img3.png" alt="UIUX">
+    </div>
+        <div class="card-containt">
+            <h3>UI/UX DISIGN</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod optio voluptatum labore animi reprehenderit impedit quo, maiores ea et architecto ullam quam exercitationem officia qui, reiciendis perferendis doloremque unde recusandae.</p>
+        </div>
+    </div>
+    </div>
+    <!-- 2 -->
+    <div class="grid-item">
+    <div class="card">
+        <div class="image-container">
+            <img class="image-resize" src="./image/img2.jpg" alt="ANDROID DEVELOPMENT">
+    </div>
+        <div class="card-containt">
+            <h3>ANDROID DEVELOPMENT</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elacilis harum voluptatibus impedit magnam animi exercitationem maiores libero, praesentium vel iste odio sunt placeat provident a eaque? Id, aliquid.</p>
+        </div>
+    </div>
+    </div>
+    <!-- 3 -->
+    <div class="grid-item">
+    <div class="card">
+        <div class="image-container">
+            <img class="image-resize" src="./image/img4.jpg" alt="REACT DEVELOPER">
+    </div>
+        <div class="card-containt">
+            <h3>REACT DEVELOPER</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque modi deserunt amet voluptatem, natus nam corporis voluptate dolor velit at enim veritatis cumque, aliquam earum, ab minus facere omnis ipsum.</p>
+        </div>
+    </div>
+    </div>
+</section>
     
 </section>
 </body>
