make webpage responsive

--- a/landing webpage/index.html
+++ b/landing webpage/index.html
@@ -60,5 +60,18 @@
 </section>
     
 </section>
+<section class="bottom-section">
+    <div class="contact-me">
+        <h1 class="heading-box">Contact Me</h1>
+        <P class="para-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, commodi alias aliquid perspiciatis quam, maiores culpa minima nobis atque iure saepe molestias exercitationem incidunt. Porro voluptatem autem ipsa exercitationem dignissimos.</P>
+        <h5>gharatabhi53@gmail.com</h5>
+    </div>
+    <div class="About-me">
+        <h1 class="heading-box">About Me</h1>
+        <P class="para-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, commodi alias aliquid perspiciatis quam, maiores culpa minima nobis atque iure saepe molestias exercitationem incidunt. Porro voluptatem autem ipsa exercitationem dignissimos.</P>
+        
+    </div>
+</section>
+<footer>PROJECT BY ABHISHEK</footer>
 </body>
 </html>
