--- a/youtube-clone/index.html
+++ b/youtube-clone/index.html
@@ -40,8 +40,35 @@
                 </i>
                 </div>
         </nav>
+        <div class="tags">
+            <div class="tag black">All</div>
+            <div class="tag light">mixes</div>
+            <div class="tag light">crypto</div>
+            <div class="tag light">html</div>
+            <div class="tag light">css</div>
+            <div class="tag light">javascript</div>
+        </div>
     </header>
-    
+    <aside>
+        <div class="bars">
+            <img src="./icons/bars.svg" alt="bars">
+            </div>
+            <div class="side-icons">
+                <i>
+                    <img src="./icons/home.svg" alt="home">
+
+                </i>
+                <p>Home</p>
+                <i>
+                    <img src="./icons/compass.svg" alt="compass">
+                </i>
+                <p>Explore</p>
+                <i>
+                    <img src="./icons/.svg" alt="home">
+                </i>
+            </div>
+        </div> 
+    </aside>
         
 </body>
 </html>
